load main window size from config

--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -1,5 +1,10 @@
 <?xml version="1.0"?>
 
+<window>
+  <width>1000</width>
+  <height>1000</height>
+</window>
+
 <plugin filename="Publisher">
 </plugin>
 
