--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ set (sources
 #  ${CMAKE_CURRENT_SOURCE_DIR}/CollapsibleWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/ColorWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
-#  ${CMAKE_CURRENT_SOURCE_DIR}/Dialog.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Dialog.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/EditableLabel.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/EnumWidget.cc
