cleanup, doxygen, etc

--- a/include/ignition/gui/qtquickcontrols2.conf
+++ b/include/ignition/gui/qtquickcontrols2.conf
@@ -1,11 +1,7 @@
 [Controls]
 Style=Material
 
-[Universal]
-Theme=Light
-Accent=Orange
-
 [Material]
 Theme=Light
-Accent=DeepOrange
+Accent=LightBlue
 Primary=DeepOrange
