--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,24 +5,26 @@ pipelines:
     - step:
         script:
           # Install dependencies
-          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable bionic main" > /etc/apt/sources.list.d/gazebo-stable.list
-          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-prerelease bionic main" > /etc/apt/sources.list.d/gazebo-prerelease.list
-          - apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
           - apt update
           - apt install -y
-            build-essential wget cmake cppcheck mercurial
+            build-essential wget cmake cppcheck mercurial gnupg
             qtbase5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             qtdeclarative5-dev
             qml-module-qtquick-controls
             qml-module-qtquick-controls2
             qml-module-qtquick-layouts
+            libogre-1.9-dev
+          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable bionic main" > /etc/apt/sources.list.d/gazebo-stable.list
+          - echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-prerelease bionic main" > /etc/apt/sources.list.d/gazebo-prerelease.list
+          - apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys D2486D2DD83DB69272AFE98867170598AF249743
+          - apt update
+          - apt install -y
             libignition-cmake1-dev
             libignition-common2-dev
             libignition-math5-dev
             libignition-msgs2-dev
             libignition-tools-dev
             libignition-transport5-dev
-            libogre-1.9-dev
           # Static checking before building
           #- sh tools/code_check.sh
           # Ignition rendering
@@ -30,7 +32,7 @@ pipelines:
           - cd ign-rendering
           - mkdir build
           - cd build
-          - cmake .. # -DENABLE_TESTS_COMPILATION=false
+          - cmake ..
           - make -j4 install
           - cd ../..
           # Ignition GUI
