--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,8 @@ pipelines:
             build-essential wget cmake cppcheck mercurial gnupg
             qtbase5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             qtdeclarative5-dev
+            qtquickcontrols2-5-dev
+            qml-module-qtquick2
             qml-module-qtquick-controls
             qml-module-qtquick-controls2
             qml-module-qtquick-layouts
