--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,36 +90,36 @@ find_package (Qt5
 
 #--------------------------------------
 # Find QWT (QT graphing library)
-find_path(QWT_INCLUDE_DIR NAMES qwt.h PATHS
-  /usr/include
-  /usr/local/include
-  /usr/local/lib/qwt.framework/Headers
-  ${QWT_WIN_INCLUDE_DIR}
-
-  PATH_SUFFIXES qwt qwt5
-)
-if (NOT QWT_INCLUDE_DIR)
-  ign_build_error("qwt5 header file was not found")
-endif()
-
-if(APPLE)
-  find_library(QWT_LIBRARY NAMES qwt PATHS
-    /usr/lib
-    /usr/local/lib
-    /usr/local/lib/qwt.framework
-    ${QWT_WIN_LIBRARY_DIR}
-  )
-else()
-  find_library(QWT_LIBRARY NAMES qwt-qt5 PATHS
-    /usr/lib
-    /usr/local/lib
-    /usr/local/lib/qwt.framework
-    ${QWT_WIN_LIBRARY_DIR}
-  )
-endif()
-if (NOT QWT_LIBRARY)
-  ign_build_error("qwt5 library was not found")
-endif()
+#find_path(QWT_INCLUDE_DIR NAMES qwt.h PATHS
+#  /usr/include
+#  /usr/local/include
+#  /usr/local/lib/qwt.framework/Headers
+#  ${QWT_WIN_INCLUDE_DIR}
+#
+#  PATH_SUFFIXES qwt qwt5
+#)
+#if (NOT QWT_INCLUDE_DIR)
+#  ign_build_error("qwt5 header file was not found")
+#endif()
+#
+#if(APPLE)
+#  find_library(QWT_LIBRARY NAMES qwt PATHS
+#    /usr/lib
+#    /usr/local/lib
+#    /usr/local/lib/qwt.framework
+#    ${QWT_WIN_LIBRARY_DIR}
+#  )
+#else()
+#  find_library(QWT_LIBRARY NAMES qwt-qt5 PATHS
+#    /usr/lib
+#    /usr/local/lib
+#    /usr/local/lib/qwt.framework
+#    ${QWT_WIN_LIBRARY_DIR}
+#  )
+#endif()
+#if (NOT QWT_LIBRARY)
+#  ign_build_error("qwt5 library was not found")
+#endif()
 
 #============================================================================
 # Configure the build
