--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -79,6 +79,7 @@ pipelines:
           # Ignition rendering
           - apt install -y
             libogre-1.9-dev
+            libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
           - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b glrendertexture
           - cd ign-rendering
           - mkdir build
