--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -16,7 +16,7 @@ pipelines:
             qml-module-qtquick-controls2
             qml-module-qtquick-layouts
           # Static checking before building
-          #- sh tools/code_check.sh
+          - sh tools/code_check.sh
           # Ignition tools
           - apt install -y
             ruby-ronn ruby-dev
