--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,7 +14,9 @@ pipelines:
             qml-module-qtquick2
             qml-module-qtquick-controls
             qml-module-qtquick-controls2
+            qml-module-qtquick-dialogs
             qml-module-qtquick-layouts
+            qml-module-qt-labs-folderlistmodel
           # Static checking before building
           - sh tools/code_check.sh
           # Ignition tools
