Store and load basic card properties

--- a/examples/config/pubsub.config
+++ b/examples/config/pubsub.config
@@ -1,12 +1,8 @@
 <?xml version="1.0"?>
 
 <window>
-  <width>1000</width>
-  <height>1000</height>
+  <width>602</width>
+  <height>767</height>
 </window>
-
-<plugin filename="Publisher">
-</plugin>
-
-<plugin filename="TopicEcho">
-</plugin>
+<plugin filename="Publisher" x="9" y="8" z="0" height="400" width="250"/>
+<plugin filename="TopicEcho" x="275" y="10" z="0" height="687" width="300"/>
