enable more tests that don't depend on widgets

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -36,16 +36,16 @@ set (qt_headers
 )
 
 set (headers
-#  Conversions.hh
-#  DragDropModel.hh
-#  Enums.hh
+  Conversions.hh
+  DragDropModel.hh
+  Enums.hh
   Helpers.hh
   Iface.hh
   ign.hh
   qt.h
 #  qwt.h
 #  QtMetatypes.hh
-#  SearchModel.hh
+  SearchModel.hh
   System.hh
 )
 
