[gz11] Re-enable several helper classes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,13 +6,13 @@ set (sources
 #  ${CMAKE_CURRENT_SOURCE_DIR}/BoolWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/CollapsibleWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/ColorWidget.cc
-#  ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Conversions.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Dialog.cc
-#  ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/DragDropModel.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/EditableLabel.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/EnumWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/GeometryWidget.cc
-#  ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/Helpers.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/Iface.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/ign.cc
   ${CMAKE_CURRENT_SOURCE_DIR}/MainWindow.cc
@@ -21,7 +21,7 @@ set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/Plugin.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/Pose3dWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/PropertyWidget.cc
-#  ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
+  ${CMAKE_CURRENT_SOURCE_DIR}/SearchModel.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/StringWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/VariablePill.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/VariablePillContainer.cc
@@ -33,12 +33,12 @@ set (gtest_sources
 #  BoolWidget_TEST
 #  ColorWidget_TEST
 #  CollapsibleWidget_TEST
-#  Conversions_TEST
-#  DragDropModel_TEST
+  Conversions_TEST
+  DragDropModel_TEST
 #  EditableLabel_TEST
 #  EnumWidget_TEST
 #  GeometryWidget_TEST
-#  Helpers_TEST
+  Helpers_TEST
   Iface_TEST
   ign_TEST
 #  MainWindow_TEST
@@ -46,7 +46,7 @@ set (gtest_sources
 #  NumberWidget_TEST
 #  Plugin_TEST
 #  Pose3dWidget_TEST
-#  SearchModel_TEST
+  SearchModel_TEST
 #  StringWidget_TEST
 #  VariablePillContainer_TEST
 #  Vector3dWidget_TEST
