--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,7 +7,7 @@ pipelines:
           # Install dependencies
           - apt update
           - apt install -y
-            build-essential wget cmake cppcheck mercurial
+            build-essential wget cmake cppcheck git mercurial g++-8
             qtbase5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
             qtdeclarative5-dev
             qtquickcontrols2-5-dev
@@ -17,8 +17,15 @@ pipelines:
             qml-module-qtquick-dialogs
             qml-module-qtquick-layouts
             qml-module-qt-labs-folderlistmodel
-          # Static checking before building
-          - sh tools/code_check.sh
+          - update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 800 --slave /usr/bin/g++ g++ /usr/bin/g++-8 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
+          - gcc -v
+          - g++ -v
+          - gcov -v
+          # lcov
+          - git clone https://github.com/linux-test-project/lcov.git
+          - cd lcov
+          - make install
+          - cd ..
           # Ignition tools
           - apt install -y
             ruby-ronn ruby-dev
@@ -30,7 +37,7 @@ pipelines:
           - make -j4 install
           - cd ../..
           # Ignition cmake
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-cmake -b c++17
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-cmake -b gz11
           - cd ign-cmake
           - mkdir build
           - cd build
@@ -38,7 +45,7 @@ pipelines:
           - make -j4 install
           - cd ../..
           # Ignition math
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b gcc8_c++17
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b gz11 
           - cd ign-math
           - mkdir build
           - cd build
@@ -50,7 +57,7 @@ pipelines:
             uuid-dev
             libavcodec-dev libavdevice-dev libavformat-dev libavutil-dev
             libfreeimage-dev libgts-dev libswscale-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b bionic
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b gz11
           - cd ign-common
           - mkdir build
           - cd build
@@ -60,7 +67,7 @@ pipelines:
           # Ignition msgs
           - apt install -y
             protobuf-compiler
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b proto3
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b gz11
           - cd ign-msgs
           - mkdir build
           - cd build
@@ -71,7 +78,7 @@ pipelines:
           - apt install -y
             libzmq3-dev
             libsqlite3-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b proto3_bionic
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b gz11
           - cd ign-transport
           - mkdir build
           - cd build
@@ -82,7 +89,7 @@ pipelines:
           - apt install -y
             libogre-1.9-dev
             libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b bionic
+          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b gz11
           - cd ign-rendering
           - mkdir build
           - cd build
@@ -94,5 +101,6 @@ pipelines:
           - cd build
           - cmake ..
           - make -j4 install
+          - make codecheck
           # Tests currently fail, graphics issue?
           # - make test
