--- a/test/config/state.config
+++ b/test/config/state.config
@@ -7,9 +7,9 @@
   <width>747</width>
   <height>708</height>
 </window>
-<plugin filename="libTestPlugin.so">
+<plugin filename="TestPlugin">
     <title>Test 1</title>
 </plugin>
-<plugin filename="libTestPlugin.so">
+<plugin filename="TestPlugin">
     <title>Test 2</title>
 </plugin>
