Subclass QGuiApplication to take advantage of singleton, and copy Iface functionality into the BackEnd class. Considering moving all BackEnd functionality which is needed by other classes to Application

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -16,6 +16,8 @@ add_definitions(
 )
 
 set (qt_headers
+  Application.hh
+  BackEnd.hh
 #  BoolWidget.hh
 #  CollapsibleWidget.hh
 #  ColorWidget.hh
