move all backend logic to application

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,6 @@ include_directories(${PROJECT_BINARY_DIR})
 
 set (sources
   ${CMAKE_CURRENT_SOURCE_DIR}/Application.cc
-  ${CMAKE_CURRENT_SOURCE_DIR}/BackEnd.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/BoolWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/CollapsibleWidget.cc
 #  ${CMAKE_CURRENT_SOURCE_DIR}/ColorWidget.cc
@@ -32,7 +31,7 @@ set (sources
 )
 
 set (gtest_sources
-  BackEnd_TEST
+  Application_TEST
 #  BoolWidget_TEST
 #  ColorWidget_TEST
 #  CollapsibleWidget_TEST
