--- a/examples/config/menus.config
+++ b/examples/config/menus.config
@@ -2,8 +2,8 @@
 
 <window>
   <menus>
-    <file visible="false">
-    </file>
+    <panel visible="false">
+    </panel>
     <plugins from_paths="false">
       <show>Publisher</show>
     </plugins>
