port menu config from gz11_louise

--- a/examples/config/no_plugins_menu.config
+++ b/examples/config/no_plugins_menu.config
@@ -1,9 +1,11 @@
 <?xml version="1.0"?>
 
+<!--
+  Main window doesn't have a plugins menu or the button to trigger it.
+-->
+
 <window>
   <menus>
-    <file visible="false">
-    </file>
     <plugins visible="false">
     </plugins>
   </menus>
