--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -12,6 +12,7 @@ set (qt_headers
   CollapsibleWidget.hh
   ColorWidget.hh
   Dialog.hh
+  DisplayPlugin.hh
   Dock.hh
   EditableLabel.hh
   EnumWidget.hh
@@ -57,6 +58,7 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   ${IGNITION-COMMON_LIBRARIES}
   ${IGNITION-MATH_LIBRARIES}
   ${IGNITION-MSGS_LIBRARIES}
+  ${IGNITION-RENDERING_LIBRARIES}
   ${IGNITION-TRANSPORT_LIBRARIES}
   ${Qt5Core_LIBRARIES}
   ${Qt5Widgets_LIBRARIES}
