Move Grid -> displays/GridDisplay

--- a/include/ignition/gui/plugins/CMakeLists.txt
+++ b/include/ignition/gui/plugins/CMakeLists.txt
@@ -1,6 +1,5 @@
 set (qt_headers_local
   Displays
-  Grid
   Grid3D
   ImageDisplay
   Publisher
@@ -32,11 +31,9 @@ foreach (src ${qt_headers_local})
     ${Qt5Widgets_LIBRARIES})
 endforeach (src ${qt_headers_local})
 
-target_link_libraries(Displays
-  Grid
-)
 foreach (src ${qt_headers_local})
   install (TARGETS ${src} DESTINATION ${IGNITION_GUI_PLUGIN_INSTALL_DIR})
 endforeach (src ${qt_headers_local})
 
+add_subdirectory(displays)
 add_subdirectory(plot)
