split time panel into control and stats

--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,40 +1,22 @@
 <?xml version="1.0"?>
 
-<plugin filename="TimePanel">
-  <title>All elements</title>
+<plugin filename="WorldControl">
+  <title>All control elements</title>
 
-  <world_control>
-    <play_pause>true</play_pause>
-    <start_paused>false</start_paused>
-    <service>/world_control</service>
-  </world_control>
-
-  <world_stats>
-    <sim_time>true</sim_time>
-    <real_time>true</real_time>
-    <real_time_factor>true</real_time_factor>
-    <topic>/world_stats</topic>
-  </world_stats>
+  <play_pause>true</play_pause>
+  <start_paused>false</start_paused>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
 
 </plugin>
 
-<plugin filename="TimePanel">
-  <title>Only sim time</title>
+<plugin filename="WorldStats">
+  <title>All stats elements</title>
 
-  <world_stats>
-    <sim_time>true</sim_time>
-    <topic>/world_stats</topic>
-  </world_stats>
-
-</plugin>
-
-<plugin filename="TimePanel">
-  <title>Only play/pause</title>
-
-  <world_control>
-    <play_pause>true</play_pause>
-    <start_paused>false</start_paused>
-    <service>/world_control</service>
-  </world_control>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <real_time_factor>true</real_time_factor>
+  <topic>/world_stats</topic>
 
 </plugin>
+
