--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,7 +1,13 @@
 <?xml version="1.0"?>
 
-<plugin filename="WorldControl">
-  <title>All control elements</title>
+<plugin
+  filename="WorldControl"
+  x="39"
+  y="0"
+  height="100"
+  width="121"
+>
+  <has_titlebar>false</has_titlebar>
 
   <play_pause>true</play_pause>
   <start_paused>false</start_paused>
@@ -10,8 +16,14 @@
 
 </plugin>
 
-<plugin filename="WorldStats">
-  <title>All stats elements</title>
+<plugin
+  filename="WorldStats"
+  x="200"
+  y="0"
+  height="90"
+  width="240"
+>
+  <has_titlebar>false</has_titlebar>
 
   <sim_time>true</sim_time>
   <real_time>true</real_time>
