--- a/examples/plugin/custom_context_menu/CMakeLists.txt
+++ b/examples/plugin/custom_context_menu/CMakeLists.txt
@@ -3,8 +3,13 @@ cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 set (CMAKE_AUTOMOC ON)
 
 # Find Qt5
-find_package (Qt5Widgets REQUIRED)
-find_package (Qt5Core REQUIRED)
+find_package (Qt5
+  COMPONENTS
+    Core
+    Quick
+    QuickControls2
+  REQUIRED
+)
 
 # Find the Ignition gui library
 find_package(ignition-gui1 REQUIRED)
@@ -12,10 +17,16 @@ find_package(ignition-common3 REQUIRED)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${IGNITION-GUI_CXX_FLAGS}")
 
+QT5_ADD_RESOURCES(resources_RCC CustomContext.qrc)
+
 include_directories(SYSTEM
-    ${IGNITION-COMMON_INCLUDE_DIRS}
-    ${IGNITION-GUI_INCLUDE_DIRS}
-    ${Qt5Core_INCLUDE_DIRS})
+  ${IGNITION-COMMON_INCLUDE_DIRS}
+  ${IGNITION-GUI_INCLUDE_DIRS}
+  ${Qt5Core_INCLUDE_DIRS}
+  ${Qt5Qml_INCLUDE_DIRS}
+  ${Qt5Quick_INCLUDE_DIRS}
+  ${Qt5QuickControls2_INCLUDE_DIRS}
+)
 
 link_directories(
   ${IGNITION-COMMON_LIBRARY_DIRS}
@@ -23,11 +34,14 @@ link_directories(
 )
 
 # Generate examples
-if (EXISTS "${CMAKE_SOURCE_DIR}/CustomContext.cc")
-  add_library(CustomContext SHARED ${headers_MOC}
-    CustomContext.cc)
-  target_link_libraries(CustomContext
-    ${IGNITION-GUI_LIBRARIES}
-    ${Qt5Core_LIBRARIES}
-    ${Qt5Widgets_LIBRARIES})
-endif()
+add_library(CustomContext SHARED ${headers_MOC}
+  CustomContext.cc
+  ${resources_RCC}
+)
+target_link_libraries(CustomContext
+  ${IGNITION-GUI_LIBRARIES}
+  ${Qt5Core_LIBRARIES}
+  ${Qt5Qml_LIBRARIES}
+  ${Qt5Quick_LIBRARIES}
+  ${Qt5QuickControls2_LIBRARIES}
+)
