save and load, all attributes

--- a/examples/config/plugin_params.config
+++ b/examples/config/plugin_params.config
@@ -1,10 +1,24 @@
 <?xml version="1.0"?>
 
-<plugin filename="Publisher">
-  <title>Publisher 1</title>
+<plugin
+  filename="Publisher"
+  title="Publisher 1"
+  show_dock_button="false"
+  x="9"
+  y="8"
+  z="10"
+  height="400"
+  width="250">
 </plugin>
 
-<plugin filename="Publisher">
-  <title>Publisher 2</title>
-  <has_titlebar>false</has_titlebar>
+<plugin
+  filename="Publisher"
+  title="Publisher 2"
+  show_title_bar="false"
+  resizable="false"
+  x="350"
+  y="8"
+  z="0"
+  height="500"
+  width="300">
 </plugin>
