--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -18,17 +18,42 @@
 
 <plugin
   filename="WorldStats"
+  title="Stats: all"
   x="200"
   y="0"
-  height="90"
+  height="180"
   width="240"
 >
-  <has_titlebar>false</has_titlebar>
-
   <sim_time>true</sim_time>
   <real_time>true</real_time>
   <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
   <topic>/world_stats</topic>
+</plugin>
 
+<plugin
+  filename="WorldStats"
+  title="Stats: time only"
+  x="200"
+  y="300"
+  height="180"
+  width="240"
+>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <topic>/world_stats</topic>
+</plugin>
+
+<plugin
+  filename="WorldStats"
+  title="Stats: RTF / it"
+  x="200"
+  y="600"
+  height="180"
+  width="240"
+>
+  <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
+  <topic>/world_stats</topic>
 </plugin>
 
