Get list of displays from config

--- a/examples/config/display_plugins.config
+++ b/examples/config/display_plugins.config
@@ -23,18 +23,15 @@
 </plugin>
 <!-- This plugin is in the middle of the list so it gets displayed on the right
   side of the window. It doesn't expand properly if it is at the bottom. -->
-<plugin filename="Displays" />
+<plugin filename="Displays">
+  <displays>
+    <display type="GridDisplay" />
+    <!-- This plugin doesn't load correctly in this demo (race condition suspected) -->
+    <!-- <display type="RealtimeFactorDisplay" /> -->
+  </displays>
+</plugin>
 <plugin filename="Scene3D">
     <title>View 2</title>
     <scene>scene</scene>
     <camera_pose>-6 -6 6 0 0.5 0.7</camera_pose>
-</plugin>
-<plugin filename="Grid3D" delete_later="true">
-  <engine>ogre</engine>
-  <scene>scene</scene>
-  <insert>
-    <cell_count>5</cell_count>
-    <pose>3.0 0 0 0 0 0</pose>
-    <color>0.2 0.2 0.2 1.0</color>
-  </insert>
 </plugin>
