Misc comments/fixes

--- a/examples/config/layout.config
+++ b/examples/config/layout.config
@@ -7,6 +7,11 @@
   <width>478</width>
   <height>551</height>
 </window>
+<plugin filename="Scene3D">
+    <title>View 2</title>
+    <scene>scene</scene>
+    <camera_pose>-6 -6 6 0 0.5 0.7</camera_pose>
+</plugin>
 <plugin filename="Publisher">
     <title>1</title>
 </plugin>
@@ -21,4 +26,10 @@
 </plugin>
 <plugin filename="Publisher">
     <title>5</title>
+</plugin>
+<plugin filename="Displays">
+  <displays>
+    <display type="GridDisplay" />
+    <display type="RealtimeFactorDisplay" />
+  </displays>
 </plugin>
