Always initialize text string (prevent crash)

--- a/examples/config/display_plugins.config
+++ b/examples/config/display_plugins.config
@@ -23,7 +23,6 @@
 <plugin filename="Displays">
     <displays>
         <display type="GridDisplay"/>
-        <!-- This plugin doesn't load correctly in this demo (race condition suspected) -->
-        <!-- <display type="RealtimeFactorDisplay" /> -->
+        <display type="RealtimeFactorDisplay" />
     </displays>
 </plugin>
