--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -2,24 +2,48 @@
 
 <plugin
   filename="WorldControl"
-  x="39"
+  title="Controls: all"
+  x="40"
   y="0"
   height="100"
-  width="121"
+  width="300"
 >
-  <has_titlebar>false</has_titlebar>
-
   <play_pause>true</play_pause>
+  <step>true</step>
   <start_paused>false</start_paused>
   <service>/world_control</service>
   <stats_topic>/world_stats</stats_topic>
+</plugin>
 
+<plugin
+  filename="WorldControl"
+  title="Controls: play/pause"
+  x="40"
+  y="140"
+  height="100"
+  width="300"
+>
+  <play_pause>true</play_pause>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
+</plugin>
+
+<plugin
+  filename="WorldControl"
+  title="Controls: step"
+  x="40"
+  y="280"
+  height="100"
+  width="300"
+>
+  <step>true</step>
+  <service>/world_control</service>
 </plugin>
 
 <plugin
   filename="WorldStats"
   title="Stats: all"
-  x="200"
+  x="500"
   y="0"
   height="180"
   width="240"
@@ -34,7 +58,7 @@
 <plugin
   filename="WorldStats"
   title="Stats: time only"
-  x="200"
+  x="500"
   y="300"
   height="180"
   width="240"
@@ -47,7 +71,7 @@
 <plugin
   filename="WorldStats"
   title="Stats: RTF / it"
-  x="200"
+  x="500"
   y="600"
   height="180"
   width="240"
