--- a/examples/config/time.config
+++ b/examples/config/time.config
@@ -1,40 +1,83 @@
 <?xml version="1.0"?>
 
-<plugin filename="TimePanel">
-  <title>All elements</title>
-
-  <world_control>
-    <play_pause>true</play_pause>
-    <start_paused>false</start_paused>
-    <service>/world_control</service>
-  </world_control>
-
-  <world_stats>
-    <sim_time>true</sim_time>
-    <real_time>true</real_time>
-    <real_time_factor>true</real_time_factor>
-    <topic>/world_stats</topic>
-  </world_stats>
-
+<plugin
+  filename="WorldControl"
+  title="Controls: all"
+  x="40"
+  y="0"
+  height="120"
+  width="300"
+>
+  <play_pause>true</play_pause>
+  <step>true</step>
+  <start_paused>false</start_paused>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<plugin filename="TimePanel">
-  <title>Only sim time</title>
-
-  <world_stats>
-    <sim_time>true</sim_time>
-    <topic>/world_stats</topic>
-  </world_stats>
-
+<plugin
+  filename="WorldControl"
+  title="Controls: play/pause"
+  x="40"
+  y="140"
+  height="120"
+  width="300"
+>
+  <play_pause>true</play_pause>
+  <service>/world_control</service>
+  <stats_topic>/world_stats</stats_topic>
 </plugin>
 
-<plugin filename="TimePanel">
-  <title>Only play/pause</title>
-
-  <world_control>
-    <play_pause>true</play_pause>
-    <start_paused>false</start_paused>
-    <service>/world_control</service>
-  </world_control>
-
+<plugin
+  filename="WorldControl"
+  title="Controls: step"
+  x="40"
+  y="280"
+  height="120"
+  width="300"
+>
+  <step>true</step>
+  <service>/world_control</service>
 </plugin>
+
+<plugin
+  filename="WorldStats"
+  title="Stats: all"
+  x="500"
+  y="0"
+  height="180"
+  width="240"
+>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
+  <topic>/world_stats</topic>
+</plugin>
+
+<plugin
+  filename="WorldStats"
+  title="Stats: time only"
+  x="500"
+  y="300"
+  height="180"
+  width="240"
+>
+  <sim_time>true</sim_time>
+  <real_time>true</real_time>
+  <topic>/world_stats</topic>
+</plugin>
+
+<plugin
+  filename="WorldStats"
+  title="Stats: RTF / it"
+  x="500"
+  y="600"
+  height="180"
+  width="240"
+>
+  <real_time_factor>true</real_time_factor>
+  <iterations>true</iterations>
+  <topic>/world_stats</topic>
+</plugin>
+
