--- a/tutorials.md.in
+++ b/tutorials.md.in
@@ -4,6 +4,16 @@ Welcome to the Ignition @IGN_DESIGNATION_CAP@ tutorials. These tutorials
 will guide you through the process of understanding the capabilities of the
 Ignition @IGN_DESIGNATION_CAP@ library and how to use the library effectively.
 
+
+**The tutorials**
+
+1. \subpage install "Installation"
+2. \subpage commandline "Command line usage"
+3. \subpage plugins "Plugins"
+4. \subpage layout "Layout"
+5. \subpage style "Style"
+6. \subpage examples "Examples"
+
 ## License
 
 The code associated with this documentation is licensed under an [Apache 2.0 License](https://www.apache.org/licenses/LICENSE-2.0).
