Install display plugins to sibling dir of standard GUI plugins

--- a/include/ignition/gui/plugins/displays/CMakeLists.txt
+++ b/include/ignition/gui/plugins/displays/CMakeLists.txt
@@ -3,12 +3,8 @@ set (qt_headers_local
   RealtimeFactorDisplay
 )
 
-set(IGNITION_GUI_PLUGIN_INSTALL_DIR
-  ${CMAKE_INSTALL_PREFIX}/${IGN_LIB_INSTALL_DIR}/ign-${IGN_DESIGNATION}-${PROJECT_VERSION_MAJOR}/plugins
-)
-
 set(IGNITION_GUI_DISPLAY_PLUGIN_INSTALL_DIR
-  ${IGNITION_GUI_PLUGIN_INSTALL_DIR}/display_plugins
+  ${CMAKE_INSTALL_PREFIX}/${IGN_LIB_INSTALL_DIR}/ign-${IGN_DESIGNATION}-${PROJECT_VERSION_MAJOR}/display_plugins
 )
 
 # Plugin shared libraries
