Move 'plugins/displays' dir to 'display_plugins'

--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -65,6 +65,7 @@ target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
   TINYXML2::TINYXML2
 )
 
+add_subdirectory(display_plugins)
 add_subdirectory(plugins)
 
 #ign_install_includes("" ${CMAKE_CURRENT_BINARY_DIR}/${IGN_DESIGNATION}.hh)
