Use display plugin initial config from xml

--- a/examples/config/display_plugins.config
+++ b/examples/config/display_plugins.config
@@ -22,7 +22,12 @@
 </plugin>
 <plugin filename="Displays">
     <displays>
-        <display type="GridDisplay"/>
+        <display type="GridDisplay">
+            <cell_count>5</cell_count>
+            <pose>3.0 0 0 0 0 0</pose>
+            <color>0.2 0.2 0.2 1.0</color>
+        </display>
+
         <display type="RealtimeFactorDisplay" />
     </displays>
 </plugin>
