--- a/examples/config/display_plugins.config
+++ b/examples/config/display_plugins.config
@@ -34,6 +34,7 @@
 
         <!-- Displays for scene named "scene2" (default) -->
         <display type="GridDisplay">
+            <title>Grid (scene2)</title>
             <scene>scene2</scene>
         </display>
 
