--- a/examples/config/display_plugins.config
+++ b/examples/config/display_plugins.config
@@ -32,7 +32,7 @@
         </display>
         <display type="RealtimeFactorDisplay" />
 
-        <!-- Displays for scene named "scene2" (default) -->
+        <!-- Displays for scene named "scene2" -->
         <display type="GridDisplay">
             <title>Grid (scene2)</title>
             <scene>scene2</scene>
