--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,11 @@ pipelines:
         script:
           # Install dependencies
           - apt update
+          - apt -y install wget lsb-release gnupg
+          - sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-stable `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-stable.list'
+          - sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu-prerelease `lsb_release -cs` main" > /etc/apt/sources.list.d/gazebo-prerelease.list'
+          - wget http://packages.osrfoundation.org/gazebo.key -O - | apt-key add -
+          - apt update
           - apt install -y
             build-essential wget cmake cppcheck git mercurial g++-8
             qtbase5-dev libtinyxml2-dev libprotoc-dev libprotobuf-dev
@@ -27,76 +32,15 @@ pipelines:
           - cd lcov
           - make install
           - cd ..
-          # Ignition tools
-          - apt install -y
-            ruby-ronn ruby-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-tools -b default
-          - cd ign-tools
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition cmake
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-cmake -b gz11
-          - cd ign-cmake
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition math
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-math -b gz11 
-          - cd ign-math
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition common
-          - apt install -y
-            uuid-dev
-            libavcodec-dev libavdevice-dev libavformat-dev libavutil-dev
-            libfreeimage-dev libgts-dev libswscale-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-common -b gz11
-          - cd ign-common
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition msgs
-          - apt install -y
-            protobuf-compiler
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-msgs -b gz11
-          - cd ign-msgs
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition transport
-          - apt install -y
-            libzmq3-dev
-            libsqlite3-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-transport -b gz11
-          - cd ign-transport
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
-          # Ignition rendering
-          - apt install -y
-            libogre-1.9-dev
-            libglew-dev libfreeimage-dev freeglut3-dev libxmu-dev libxi-dev
-          - hg clone http://bitbucket.org/ignitionrobotics/ign-rendering -b gz11
-          - cd ign-rendering
-          - mkdir build
-          - cd build
-          - cmake ..
-          - make -j4 install
-          - cd ../..
+          # Dependency: Ignition packages
+          - apt-get -y install
+            libignition-cmake2-dev
+            libignition-tools-dev
+            libignition-common3-dev
+            libignition-math6-dev
+            libignition-msgs3-dev
+            libignition-transport6-dev
+            libignition-rendering-dev
           # Ignition GUI
           - mkdir build
           - cd build
