Re-enable shadows, and other small tweaks

--- a/examples/config/scene3d.config
+++ b/examples/config/scene3d.config
@@ -11,16 +11,18 @@
     <title>View 1</title>
     <engine>ogre</engine>
     <scene>scene</scene>
-    <ambient_light>1 1 1</ambient_light>
+    <ambient_light>0 0 1</ambient_light>
     <background_color>0.8 0.8 0.8</background_color>
     <camera_pose>-6 0 6 0 0.5 0</camera_pose>
 </plugin>
-<plugin filename="Scene3D">
+<!-- TODO(anyone) Support multiple scenes in the same window
+  plugin filename="Scene3D">
     <title>View 2</title>
     <scene>scene</scene>
     <camera_pose>-6 -6 6 0 0.5 0.7</camera_pose>
-</plugin>
-<plugin filename="Grid3D" delete_later="true">
+</plugin-->
+<!-- TODO(anyone) Fix grid plugin
+  plugin filename="Grid3D" delete_later="true">
   <engine>ogre</engine>
   <scene>scene</scene>
   <insert>
@@ -28,4 +30,4 @@
     <pose>3.0 0 0 0 0 0</pose>
     <color>0.2 0.2 0.2 1.0</color>
   </insert>
-</plugin>
+</plugin-->
