--- a/include/ignition/gui/CMakeLists.txt
+++ b/include/ignition/gui/CMakeLists.txt
@@ -62,9 +62,11 @@ ign_create_core_library(SOURCES
 )
 
 target_link_libraries(${PROJECT_LIBRARY_TARGET_NAME}
+  PUBLIC
   ${IGNITION-COMMON_LIBRARIES}
   ${IGNITION-MATH_LIBRARIES}
   ${IGNITION-MSGS_LIBRARIES}
+  ignition-plugin${IGN_PLUGIN_VER}::loader
   ${IGNITION-TRANSPORT_LIBRARIES}
   ${Qt5Core_LIBRARIES}
   ${Qt5Qml_LIBRARIES}
